# iz-sql-tableview

./: .gitignore  CMakeLists.txt  LICENSE  QmlPluginDump.cmake  qml_src.qrc
include/IzSQLTableView/: IzSQLTableViewPlugin_Enums.h  QmlPlugin.h
include/IzSQLTableView/JS/: ObjectCreator.js
include/IzSQLTableView/QML/: ColumnsSettings.qml  ColumnsSettingsPopup.qml  DefaultDelegate.qml  ExcelExportPopup.qml  HeaderDelegate.qml  IzSQLTableView.qml  QuickSettings.qml  QuickSettingsSpinBox.qml  TableButton.qml
private/: ColumnsSettingsWrapper.cpp  ColumnsSettingsWrapper.h  QmlPlugin.cpp  SQLTableViewImpl.cpp  SQLTableViewImpl.h  TableHeaderModel.cpp  TableHeaderModel.h  TableHeaderProxyModel.cpp  TableHeaderProxyModel.h  qmldir
